1.1.0 [not yet released]
 - Compare mesh hash in interpolate_vertex_values
 - Add hash() for Mesh and MeshTopology
 - Expose GenericVector::operator{+=,-=,+,-}(double) to Python
 - Add function Function::compute_vertex_values not needing a mesh argument
 - Add support for XDMF and HDF5
 - Add new interface LinearOperator for matrix-free linear systems
 - Remove MTL4 linear algebra backend
 - Rename down_cast --> as_type in C++ / as_backend_type in Python
 - Remove KrylovMatrix interface
 - Remove quadrature classes
 - JIT compiled C++ code can now include a dolfin namespace
 - Expression string parsing now understand C++ namespace such as std::cosh
 - Fix bug in Expression so one can pass min, max
 - Fix bug in SystemAssembler, where mesh.init(D-1, D) was not called before assemble
 - Fix bug where the reference count of Py_None was not increased
 - Fix bug in reading TimeSeries of size smaller than 3
 - Improve code design for Mesh FooIterators to avoid dubious down cast
 - Bug fix in destruction of PETSc user preconditioners
 - Add CellVolume(mesh) convenience wrapper to Python interface for UFL function
 - Fix bug in producing outward pointing normals of BoundaryMesh
 - Fix bug introduced by SWIG 2.0.5, where typemaps of templated typedefs are not handled correctly
 - Fix bug introduced by SWIG 2.0.5, which treated uint as Python long
 - Add check that sample points for TimeSeries are monotone
 - Fix handling of parameter "report" in Krylov solvers
 - Add new linear algebra backend "PETScCusp" for GPU-accelerated linear algebra
 - Add sparray method in the Python interface of GenericMatrix, requires scipy.sparse
 - Make methods that return a view of contigous c-arrays, via a NumPy array, keep
	a reference from the object so it wont get out of scope
 - Add parameter: "use_petsc_signal_handler", which enables/disable PETSc system signals
 - Avoid unnessesary resize of result vector for A*b
 - MPI functionality for distributing values between neighbours