@@ -1,4 +1,5 @@
 1.1.0 [not yet released]
+ - Add memory usage monitor: monitor_memory_usage()
  - Compare mesh hash in interpolate_vertex_values
  - Add hash() for Mesh and MeshTopology
  - Expose GenericVector::operator{+=,-=,+,-}(double) to Python
